# LeedleGMOD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  leedle.cpp
.github/workflows/: cmake.yml
leedle/: color.hpp  config.hpp  features.hpp  gui.cpp  gui.hpp  hooks.hpp  input.cpp  input.hpp  leedle.cpp  leedle.hpp  math.hpp  memory.cpp  memory.hpp  module.hpp  render.cpp  render.hpp  singleton.hpp
leedle/features/: bhop.hpp  feature.hpp  features.hpp
leedle/game/: fnv.hpp  netvars.hpp
leedle/game/interfaces/: clientmode.hpp  interface.hpp  luashared.hpp  vclient.hpp
leedle/game/types/: baseentity.hpp  clientclass.hpp  luainterface.hpp  recvproprs.hpp  usercmd.hpp
leedle/hooks/: createmove.hpp  framestage.hpp  hook.hpp  hooks.cpp  hooks.hpp
tests/: CMakeLists.txt  safe_call_test.cpp  vmt_test.cpp
